# CodingChallenges

./: README.md  pyproject.toml
1_Anagrams/: detect_anagrams.py  test_detect_anagrams.py
2_SumEvens/: sum_evens.py  test_sum_evens.py
4_GatherImageHashes/: gather_image_hashes.py  test_expected_output.txt  test_gather_image_hashes.py
